Fix CORS and file download issues